// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Knobs/LoginForm Dynamic 1`] = `null`;

exports[`Storyshots Knobs/UserInput Dynamic 1`] = `null`;

exports[`Storyshots Stories/Button active 1`] = `
<button
  className="active"
  disabled={false}
  onClick={[Function]}
>
  Proceed
</button>
`;

exports[`Storyshots Stories/Button default 1`] = `
<button
  className="inactive"
  disabled={true}
  onClick={[Function]}
>
  Proceed
</button>
`;

exports[`Storyshots Stories/LoginForm default 1`] = `
<div
  style={
    Object {
      "width": "50%",
    }
  }
>
  <div
    className="content"
  >
    <input
      onKeyPress={[Function]}
      placeholder="Name Please"
      type="text"
    />
    <input
      onKeyPress={[Function]}
      placeholder="Enter Password"
      type="password"
    />
    <button
      className="inactive"
      disabled={true}
      onClick={null}
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Storyshots Stories/LoginForm filled 1`] = `
<div
  style={
    Object {
      "width": "50%",
    }
  }
>
  <div
    className="content"
  >
    <input
      onKeyPress={[Function]}
      type="text"
      value="Arwa Lokhandwala"
    />
    <input
      onKeyPress={[Function]}
      type="password"
      value="arwa"
    />
    <button
      className="active"
      disabled={false}
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Storyshots Stories/UserInput default 1`] = `
<input
  onKeyPress={[Function]}
  placeholder="Name please"
  type="text"
/>
`;

exports[`Storyshots Stories/UserInput filled 1`] = `
<input
  onKeyPress={[Function]}
  placeholder="Name please"
  type="text"
  value="Arwa Lokhandwala"
/>
`;
